# CppLogger

./: CMakeLists.txt  README.md  app-example.cc  console-log.h  file-log.h  log-formatter.h  log-manager.h  log-writer.h  logger.cc  logger.h  simple-console-logger.cc
